# RunixUpdateManager

./: Cargo.toml  README.md
bootctl/: Cargo.toml
bootctl/src/: lib.rs
chunk/: Cargo.toml
chunk/src/: lib.rs
deployment/: Cargo.toml
deployment/src/: lib.rs
init/: Cargo.toml
init/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
rum/: Cargo.toml
rum/src/: main.rs
