[package]
name = "runix-bootctl"
version = "0.1.0"
edition = "2024"
description = "A/B boot-control state + bootloader slot selection for RunixOS (shared by RUM and Rignite)"

[[bin]]
name = "rignite-sim"
path = "src/bin/rignite_sim.rs"

[dependencies]
runix-update-protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
