[package]
name = "rum"
version = "0.1.0"
edition = "2024"
description = "RunixUpdateManager - RunixOS on-device update client"

[[bin]]
name = "rum"
path = "src/main.rs"

[dependencies]
runix-update-protocol = { path = "../protocol" }
runix-chunk = { path = "../chunk" }
runix-bootctl = { path = "../bootctl" }
runix-deployment = { path = "../deployment" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hex = "0.4"
